<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SwiftON</string>
    <string name="signup">Signup</string>
    <string name="user_device_id">User Device ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="header_banner">header banner</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signuphere">No account yet? Signup Here</string>
    <string name="Loginhere">Have an account? Login Here</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="my_orders">My Orders</string>
    <string name="designs_collection">Designs Collection</string>
    <string name="checkout_designs">Checkout Designs</string>
    <string name="become_a_vendor">Become a Vendor</string>
    <string name="settings">Settings</string>
    <string name="find_designers">Find Designers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_measurement">My Measurement</string>
    <string name="collaborate">Collaborate</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="my_customers">My Customers</string>
    <string name="my_design_collection">My Design Collection</string>
    <string name="dashboard">Dashboard</string>
    <string name="client_id">610830938076-7t02t4ltgmdfls64c59fp71e8vtbi0j8.apps.googleusercontent.com</string>
    <string name="my_dealers">My Dealers</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_error">Invalid Password</string>
    <string name="field_required_error">Field Required</string>
    <string name="invalid_email_error">Invalid Email</string>
    <string name="google_sign_in">google_sign_in</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="email" tools:ignore="ExtraTranslation">Email</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="fullname">FullName</string>
    <string name="finish">Finish</string>
    <string name="welcome">Welcome</string>
    <string name="make_inquiries">Make Inquiries</string>
    <string name="become_a_dealer">Become a dealer</string>
    <string name="find_tailors_shops">Find Tailors / Shops</string>
    <string name="visit_bootique">Visit Bootique</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="policies">Policies</string>
    <string name="sign_up_as_designer">Sign up as Designer</string>
    <string name="sign_in_as_designer">Sign in as Designer</string>
    <string name="logo">Logo</string>
</resources>
