<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".MainActivity">
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/colltb"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="?attr/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/header"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="#6ef4f3f5">

            <ImageView
                android:id="@+id/logo2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/swifton_logo"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:elevation="6dp"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/intolabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/welcome"
                android:textColor="#ccc"
                android:textSize="25sp"
                android:layout_below="@+id/logo2"
                android:fontFamily="@font/roboto_thin"
                android:textAlignment="center"/>
        </RelativeLayout>

    </android.support.design.widget.CollapsingToolbarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/newcarview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#fff"
        android:layout_below="@+id/colltb"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginTop="-50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/containerradius">

            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/signup"
                android:textSize="30sp"
                android:textAlignment="center"
                android:background="@drawable/leftbtnshape"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_thin"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:id="@+id/cmdSignup"/>

            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/cmdSignup"
                android:text="@string/login"
                android:textSize="30sp"
                android:textAlignment="center"
                android:background="@drawable/rightbtnshape"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_thin"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:id="@+id/cmdLogin"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/newcarview"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-31dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="30dp"
            android:paddingRight="15dp">

            <Button
                android:id="@+id/buttonToolbarFab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/signlogbuttons"
                android:fontFamily="@font/roboto_regular"
                android:padding="10dp"
                android:text="@string/make_inquiries"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCollapsingToolbarFab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/signlogbuttons"
                android:fontFamily="@font/roboto_regular"
                android:padding="10dp"
                android:text="@string/become_a_dealer"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonToolbarTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/signlogbuttons"
                android:fontFamily="@font/roboto_regular"
                android:padding="10dp"
                android:text="@string/find_tailors_shops"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCollapsingToolbarTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/signlogbuttons"
                android:fontFamily="@font/roboto_regular"
                android:padding="10dp"
                android:text="@string/visit_bootique"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorGray"
                android:outlineSpotShadowColor="@color/colorGray" />

            <TextView
                android:id="@+id/cmdterms"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="6dp"
                android:fontFamily="@font/roboto_thin"
                android:padding="6dp"
                android:text="@string/terms_of_service"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cmdpolicy"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="6dp"
                android:fontFamily="@font/roboto_thin"
                android:padding="6dp"
                android:text="@string/policies"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/designerSignup"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="6dp"
                android:fontFamily="@font/roboto_thin"
                android:padding="6dp"
                android:text="@string/sign_up_as_designer"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/designerLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="6dp"
                android:fontFamily="@font/roboto_thin"
                android:padding="6dp"
                android:text="@string/sign_in_as_designer"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>